# ECEN_427

./: README
hw/: ecen427.bit
hw/ip_repo/ecen427_PIT_IP_1.0/: component.xml
hw/ip_repo/ecen427_PIT_IP_1.0/drivers/ecen427_PIT_IP_v1_0/src/: Makefile  (+3 more)
hw/ip_repo/ecen427_PIT_IP_1.0/example_designs/bfm_design/: design.tcl  ecen427_PIT_IP_v1_0_tb.sv
hw/ip_repo/ecen427_PIT_IP_1.0/example_designs/debug_hw_design/: design.tcl  ecen427_PIT_IP_v1_0_hw_test.tcl
hw/vip_simulation/pit_ip_vip_simulation/: pit_ip_vip_simulation.xpr
hw/vip_simulation/pit_ip_vip_simulation/pit_ip_vip_simulation.cache/wt/: gui_handlers.wdf  java_command_handlers.wdf  synthesis.wdf  webtalk_pa.xml
hw/vip_simulation/pit_ip_vip_simulation/pit_ip_vip_simulation.runs/.jobs/: vrs_config_1.xml  vrs_config_3.xml
kernel/lab4_audio_codec/: audio_codec.c
kernel/lab6_pit/: pit.c
userspace/apps/: CMakeLists.txt
userspace/apps/clock/: clock.c
userspace/apps/lab1_helloworld/: main.c
userspace/apps/lab4_m1/: CMakeLists.txt  lab4_m1.c
userspace/apps/lab4_m2/: CMakeLists.txt  lab4_m2.c
userspace/apps/space_invaders/: CMakeLists.txt  alien_march.c  alien_march.h  bullet.c  bullet.h  bunkers.c  bunkers.h  button_debouncer.c  button_debouncer.h  flying_alien.c  flying_alien.h  game_over.c  game_over.h  globals.c  globals.h  hdmi.c  hdmi.h  main.c  player.c  player.h  print_alien_test.c  sounds.c  sounds.h  sprites.c  sprites.h  world.c  world.h
userspace/drivers/: CMakeLists.txt
userspace/drivers/buttons/: buttons.c
userspace/drivers/intc/: intc.c
userspace/drivers/switches/: switches.c
(+123 files in other folders)
